# Concepts_Fertig

./: .gitignore  CMakeLists.txt
src/: BeforeConcepts.cpp  RequirementKinds.cpp
